--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-node_modules/
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+.env
+
+# dependencies
+**/node_modules
+
+# testing
+/coverage
+/allure-results
+
+# built files
+/build
+/dist
+src/assets/translations/translations.csv
+
+# docker
+.env
+.docker/.env
+/certs
+
+# misc
+.DS_Store
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
