--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
+    "amplitude-js": "^8.3.0",
     "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.5",
     "react": "^17.0.2",
