--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-modal": "^3.13.1",
     "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
