--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "tailwindcss": "^2.1.1",
-    "twin.macro": "^2.3.3"
+    "twin.macro": "^2.3.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
